--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/iamatulbansal/rest-api-jwt.git"
   },
-  "author": "",
+  "author": "Atul Bansal",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/iamatulbansal/rest-api-jwt/issues"
   },
   "homepage": "https://github.com/iamatulbansal/rest-api-jwt#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "joi": "^17.9.1",
+    "mongoose": "^7.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
